# io-gate

./: Cargo.toml  config.yaml  justfile
src/: comm.rs  config.rs  consts.rs  lib.rs  main.rs  message.rs  shutters.rs
src/homeassistant/: connection.rs  discovery.rs  message.rs
